--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,35 @@
+@import 'variables';
+@import 'layout';
+
 body{
-  background-color: #ACACAC;
+  background-color: $gray-lighter;
+  font-size: $font-base;
 }
+
 
 .words{ 
   color: #BB6666;
+}
+
+:global(.search-box) {
+  background: $main-color;
+  width: 100%;
+  display: flex;
+}
+
+:global(.wrapper) {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  
+  form {
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+  input[type=text]{
+    width: 100%;
+    height: 50%;
+    display: block;
+  }
 }
